# miden-bridge-mono

./: .gitmodules  README.md  bridge.sh
.github/workflows/: contracts.yml
miden/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
miden/src/: full_library.rs  lib.rs  main.rs  utils.rs
miden/src/accounts/: mod.rs  token_wrapper.rs
miden/src/accounts/components/: mod.rs
miden/src/asm/contracts/: fungible_wrapper.masm
miden/src/asm/events/: BRIDGE.masm
miden/src/asm/note_scripts/: CROSSCHAIN.masm
miden/src/errors/: mod.rs
miden/src/notes/: bridge.rs  crosschain.rs  mod.rs
miden/tests/: main.rs
miden/tests/account/: wrapper.rs
miden/tests/common/: executor.rs  mod.rs  note.rs
relayer/: .dockerignore  Dockerfile
relayer/api/: package-lock.json  package.json  swagger.yaml
relayer/evm-side/: package-lock.json  package.json
relayer/evm-side/db/: typeOrm.config.ts
relayer/evm-side/db/migrations/: eixtAssetMetadataOptional.migration.ts  exitFields.migration.ts  exitsTable.migration.ts  fulfillModel.migration.ts  scansTable.migration.ts
relayer/evm-side/src/: app.module.ts
relayer/evm-side/src/config/: config.const.ts  config.module.ts  index.ts
relayer/evm-side/src/config/interfaces/: config.interface.ts  index.ts
relayer/evm-side/src/config/services/: bridge-address.service.ts  config.service.ts  index.ts  miden.service.ts  rpc.service.ts
relayer/evm-side/src/models/: exit.model.ts  fulfill.model.ts  scan.model.ts
relayer/evm-side/src/modules/evm/: evm.abi.ts  evm.module-definition.ts  evm.module.ts
relayer/evm-side/src/modules/evm/interfaces/: bridge-event.interface.ts  evm-module-options.interface.ts
relayer/evm-side/src/modules/evm/services/: poller.service.ts  rpc.service.ts
relayer/evm-side/src/modules/miden/: index.ts  miden.module-definition.ts  miden.module.ts
relayer/evm-side/src/modules/miden/interfaces/: index.ts  miden-module-options.interface.ts  miden.interface.ts
relayer/evm-side/src/modules/miden/services/: miden.service.ts  poller.service.ts
relayer/evm-side/src/modules/relayer/: evm.abi.ts  relayer.module.ts
relayer/evm-side/src/modules/relayer/services/: evm.service.ts  miden.service.ts  relayer.service.ts
relayer/evm-side/src/repositories/: index.ts  repositories.module.ts
relayer/evm-side/src/repositories/services/: exit.repository.ts  scans.repository.ts
relayer/miden-tx-sender/: Cargo.toml  rustfmt.toml
relayer/miden-tx-sender/src/: config.rs  main.rs
relayer/miden-tx-sender/src/onchain/: asset.rs  client.rs  deploy_token.rs  errors.rs  mint_note.rs  mock_store.rs  mod.rs  poll_events.rs  responses.rs
relayer/miden-tx-sender/src/store/: mod.rs  store.sql
relayer/miden-tx-sender/src/utils/: errors.rs  metadata.rs  mod.rs  origin.rs
