[package]
name = "miden-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[lib]

[features]
default = []
std = ["miden-assembly/std", "miden-objects/std", "miden-stdlib/std"]
async = ["miden-tx/async"]
# the testing feature is required to enable the account creation pow patch
testing = ["miden-objects/testing", "miden-tx/testing", "miden-lib/testing"]
with-debug-info = ["miden-stdlib/with-debug-info"]

[dependencies]
miden-lib = { version = "0.8.0", features = ["std"] }
miden-objects = { version = "0.8.1", features = ["std"]}
regex = { version = "1.10" }
walkdir = { version = "2.5" }
miden-assembly = "^0.13.0"
miden-stdlib = "^0.13.0"
miden-tx = { version = "0.8.1", features = ["std"]}
thiserror = "2.0.12"

[dev-dependencies]
miden-lib = { version = "0.8.0", features = ["std"] }
miden-objects = { version = "0.8.1", features = ["testing"] }
miden-tx = { version = "0.8.1", features = ["std", "testing"]}
miden-prover = { version = "^0.13.0", default-features = false }
vm-processor = { package = "miden-processor", version = "^0.13.0", default-features = false }
winter-maybe-async = { version = "0.12" }
rand_chacha = "0.9.0"


[build-dependencies]
regex = { version = "1.10" }
walkdir = { version = "2.5" }
miden-assembly = { version = "^0.13.0", features = ["std"] }
miden-stdlib = "^0.13.0"
miden-lib = { version = "0.8.0" }
miden-objects = { version = "0.8.1" }

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
