[package]
name = "miden-tx-sender"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
alloy-primitives = "1.0.0"
deadpool-sqlite = { version = "0.11", features = ["rt_tokio_1"] }
dotenv = "0.15.0"
eyre = "0.6.12"
miden-bridge = { path = "../../miden" }
miden-client = { version = "0.9.0", features = ["concurrent", "sqlite", "tonic"] }
miden-crypto = "0.14.1"
miden-objects = "0.9.2"
rand = "0.9"
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
tokio = "1.44.1"
