[package]
name = "miden-tx-sender"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"

[dependencies]
async-sqlite = "0.5.2"
dotenv = "0.15.0"
miden-bridge = { path = "../../miden" }
miden-client = { version = "0.10.0", features = ["sqlite", "tonic"] }
miden-crypto = "0.15.7"
miden-objects = "0.10.0"
miden-lib = "0.10.0"
rand = "0.9"
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = { version = "^0.36", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.44.1"
log = "0.4.27"
